# NeuroScan

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ErrorBoundary.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  ImageUpload.tsx  ResultDisplay.tsx
src/: api.py  pipeline.py
